--- a/views/test.ejs
+++ b/views/test.ejs
@@ -3,10 +3,10 @@
 
 <div class="container text-center mt-15">
     <div class="content">
-        <h1>Question 1</h1>
+        <h1><%= question.title %></h1>
         <form action="/1" method="POST">
-            <h3>What do you think about this test?</h3>
-            <input type="text" placeholder="" name="answer">
+            <h3><%= question.question %></h3>
+            <input type="<%= question.type %>" placeholder="" name="answer">
             <input type="submit" value="Next">
         </form>
     </div>
