--- a/views/test.ejs
+++ b/views/test.ejs
@@ -6,7 +6,7 @@
         <h1><%= question.title %></h1>
         <form action="/<%= question.number %>" method="POST">
             <h3><%= question.question %></h3>
-            <input type="<%= question.type %>" placeholder="" name="answer">
+            <input type="<%= question.type %>" placeholder="" name="answer" required>
             <input type="submit" value="Next">
         </form>
     </div>
