--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -3,7 +3,10 @@
 <form action="/addquestion" method="POST">
     <input type="text" name="title" id="" placeholder="Question title">
     <input type="text" name="question" id="" placeholder="Question text">
-    <input type="text" name="type" id="" placeholder="Question type (only text for now)">
+    <select name="type" id="">
+        <option>text</option>
+    </select>
+    <!--<input type="text" name="type" id="" placeholder="Question type (only text for now)">-->
     <input type="submit" value="Add Question!">
 </form>
 
