--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 <h1>What kind of question do you want to add?</h1>
-<form action="/createquestion" method="POST">
+<form action="/settype" method="POST">
     <!--
     <input type="text" name="title" id="" placeholder="Question title">
     <input type="text" name="question" id="" placeholder="Question text">
