--- a/views/text.ejs
+++ b/views/text.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 <h1>What kind of question do you want to add?</h1>
-<form action="/addquestion" method="POST">
+<form action="/questions" method="POST">
     <input type="text" name="title" id="" placeholder="Question title">
     <input type="text" name="question" id="" placeholder="Question text">
     <!--<input type="text" name="type" id="" placeholder="Question type (only text for now)">-->
