--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -2,27 +2,28 @@
 <%- include("partials/navbar") -%>
 
 <h1>What kind of question do you want to add?</h1>
-<select name="type" id="type">
-    <option value="text">Text</option>
-    <option value="multiplechoice">Multiple Choice</option>
-</select>
-<input id="choosetype" type="submit" value="Choose Type">
+<form action="/questions" method="POST">
+    <select name="type" id="type">
+        <option value="text">Text</option>
+        <option value="multiplechoice">Multiple Choice</option>
+    </select>
+    <input id="choosetype" type="button" name="choosetype" value="Choose Type">
+    <div id="general">
+        <input type="text" name="title" placeholder="Question title">
+        <input type="text" name="question" placeholder="Question text">
+    </div>
+    <div id="text" action="/questions" method="POST">
+        <input type="submit" value="Create Question!">
+    </div>
 
-<form id="text" action="/questions" method="POST">
-    <input type="text" name="title" placeholder="Question title">
-    <input type="text" name="question" placeholder="Question text">
-    <input type="submit" value="Create Question!">
+    <div id="multiplechoice" action="/questions" method="POST">
+        <input type="text" name="answer1" id="answer1">
+        <input type="text" name="answer2" id="answer2">
+        <button type="button" class="new">New Answer</button>
+        <button type="button" class="remove">Delete Answer</button>
+        <input type="submit" value="Create Question!">
+    </div>
+
+    <script src="/js/newquestion.js"></script>
 </form>
-
-<form id="multiplechoice" action="/questions" method="POST">
-    <input type="text" name="title" placeholder="Question title">
-    <input type="text" name="question" placeholder="Question text">
-    <input type="text" name="answer1" id="answer1">
-    <input type="text" name="answer2" id="answer2">
-    <button type="button" class="new">New Answer</button>
-    <button type="button" class="remove">Delete Answer</button>
-    <input type="submit" value="Create Question!">
-</form>
-
-<script src="/js/newquestion.js"></script>
 <%- include("partials/footer") -%>
