--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -5,10 +5,12 @@
     <div>
         <h5>Title: <%= question.title %></h5>
         <h5>Question: <%= question.question %></h5>
+        <a href="/questions/<%=question._id%>">
+            <button>Show Question</button>
+        </a>
         <a href="/questions/<%=question._id%>/edit">
             <button>Edit Question</button>
         </a>
     </div>
 <% })%>
-<script src="/js/editquestion.js"></script>
 <%- include("partials/footer") -%>
