--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -1,16 +1,21 @@
 <%- include("partials/header") -%>
 <%- include("partials/navbar") -%>
-
-<% questions.forEach(function(question){ %>
-    <div>
-        <h5>Title: <%= question.title %></h5>
-        <h5>Question: <%= question.question %></h5>
-        <a href="/questions/<%=question._id%>">
-            <button>Show Question</button>
-        </a>
-        <a href="/questions/<%=question._id%>/edit">
-            <button>Edit Question</button>
-        </a>
-    </div>
-<% })%>
+<link rel="stylesheet" href="css/questions.css">
+<div class="container mt-5">
+    <h1>List of Questions: </h1>
+    <% questions.forEach(function(question){ %>
+        <div class="question">
+            <h2><%= question.title %></h2>
+            <hr>
+            <h5>Question: <%= question.question %></h5>
+            <h5>Type: <%=question.type %></h5>
+            <a href="/questions/<%=question._id%>">
+                <button type="button" class="btn">Show Question</button>
+            </a>
+            <a href="/questions/<%=question._id%>/edit">
+                <button type="button" class="btn">Edit Question</button type="button">
+            </a>
+        </div>
+    <% })%>
+</div>
 <%- include("partials/footer") -%>
