--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/navbar") -%>
 <link rel="stylesheet" href="css/questions.css">
 <div class="container mt-5">
-    <h1>List of Questions: </h1>
+    <h1>Questions</h1>
     <% questions.forEach(function(question){ %>
         <div class="question">
             <h2><%= question.title %></h2>
