--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -1,6 +1,9 @@
-
-.question:nth-child(even) {background: #fcf6f5ff}
-.question:nth-child(odd) {background:#dae9f1}
+.question:nth-child(even) {
+    background: #fcf6f5ff
+}
+.question:nth-child(odd) {
+    background:#dae9f1
+}
 
 button.btn{
     background: #edc2d8ff;
@@ -8,4 +11,15 @@ button.btn{
 
 div.question{
     padding: 10px;
+}
+
+.container{
+    background: #dae9f1;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 10px;
+}
+
+h1{
+    text-align: center;
 }
