--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -17,16 +17,16 @@
             <textarea class="form-control" name="question" placeholder="Question text"></textarea>
         </div>
         <div id="text" class="hide">
-            <input type="submit" class="btn btn-pink" value="Create Question!">
+            <input type="submit" class="btn btn-form" value="Create Question!">
         </div>
 
         <div id="multiplechoice" class="hide">
             <p>Possible answers: </p>
             <input type="text" class="form-control" name="answer1" id="answer1">
             <input type="text" class="form-control" name="answer2" id="answer2">
-            <button type="button" class="new btn btn-pink">New Answer</button>
-            <button type="button" class="remove btn btn-pink">Delete Answer</button>
-            <input type="submit" class="btn btn-pink" value="Create Question!">
+            <button type="button" class="new btn btn-form">New Answer</button>
+            <button type="button" class="remove btn btn-form">Delete Answer</button>
+            <input type="submit" class="btn btn-form" value="Create Question!">
         </div>
     </form>
     <script src="/js/multiplechoice.js"></script>
