--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -1,29 +1,30 @@
 <%- include("partials/header") -%>
 <%- include("partials/navbar") -%>
-<form action="/questions/<%=question._id%>" method="PUT">
-    <input type="text" name="title" placeholder="Question title" value="<%=question.title%>">
-    <input type="text" name="question" placeholder="Question text" value="<%=question.question%>">
-    <% console.log(Object.keys(question)); %>
-    <% switch(question.type){
-        case "multiplechoice":{
-            question.possibleAnswers.forEach(function(answer, index){ %>
-                <input type="text" name="answer<%=index+1%>" id="answer<%=index+1%>" value="<%=answer%>">
-            <% }); %>    
-            <button type="button" class="new">New Answer</button>
-            <button type="button" class="remove">Delete Answer</button>
-            <% break;
-        }
-        case "text": {
-            console.log("we found text");
-            break;
-        }
-        default: {
-            console.log("unknown type: " + question.type);
-            break;
-        }
-    } %>
-    <input type="submit" value="Save Question!">
-</form> 
-
+<div class="container mt-5">
+    <form action="/questions/<%=question._id%>" method="PUT">
+        <input type="text" class="form-control" name="title" placeholder="Question title" value="<%=question.title%>">
+        <input type="text" class="form-control" name="question" placeholder="Question text" value="<%=question.question%>">
+        <% console.log(Object.keys(question)); %>
+        <% switch(question.type){
+            case "multiplechoice":{
+                question.possibleAnswers.forEach(function(answer, index){ %>
+                    <input type="text" class="form-control" name="answer<%=index+1%>" id="answer<%=index+1%>" value="<%=answer%>">
+                <% }); %>    
+                <button type="button" class="new btn btn-form">New Answer</button>
+                <button type="button" class="remove btn btn-form">Delete Answer</button>
+                <% break;
+            }
+            case "text": {
+                console.log("we found text");
+                break;
+            }
+            default: {
+                console.log("unknown type: " + question.type);
+                break;
+            }
+        } %>
+        <input type="submit" class="btn btn-form" value="Save Question!">
+    </form> 
+</div>
 <script src="/js/multiplechoice.js"></script>
 <%- include("partials/footer") -%>
