fix problem with counting answers for mc

--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -8,7 +8,7 @@
         <% switch(question.type){
             case "multiplechoice":{
                 question.possibleAnswers.forEach(function(answer, index){ %>
-                    <input type="text" class="form-control" name="answer<%=index+1%>" id="answer<%=index+1%>" value="<%=answer%>">
+                    <input type="text" class="form-control answer" name="answer<%=index+1%>" id="answer<%=index+1%>" value="<%=answer%>">
                 <% }); %>    
                 <button type="button" class="new btn btn-form">New Answer</button>
                 <button type="button" class="remove btn btn-form">Delete Answer</button>
