--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -22,8 +22,8 @@
 
         <div id="multiplechoice" class="hide">
             <p>Possible answers: </p>
-            <input type="text" class="form-control" name="answer1" id="answer1">
-            <input type="text" class="form-control" name="answer2" id="answer2">
+            <input type="text" class="form-control answer" name="answer1" id="answer1">
+            <input type="text" class="form-control answer" name="answer2" id="answer2">
             <button type="button" class="new btn btn-form">New Answer</button>
             <button type="button" class="remove btn btn-form">Delete Answer</button>
             <input type="submit" class="btn btn-form" value="Create Question!">
