--- a/views/editquestion.ejs
+++ b/views/editquestion.ejs
@@ -1,7 +1,8 @@
 <%- include("partials/header") -%>
 <%- include("partials/navbar") -%>
 <div class="container mt-5">
-    <form action="/questions/<%=question._id%>" method="PUT">
+    <form action="/questions/<%=question._id%>?_method=PUT" method="POST">
+        <input type="hidden" name="type" value="<%= question.type %>">
         <input type="text" class="form-control" name="title" placeholder="Question title" value="<%=question.title%>">
         <input type="text" class="form-control" name="question" placeholder="Question text" value="<%=question.question%>">
         <% console.log(Object.keys(question)); %>
