--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,12 +2,15 @@ body {
     background: #edc2d8ff;
 }
 
+.mt-10{
+    margin-top: 10%;
+}
 .mt-15{
     margin-top: 15%;
 }
 .btn-form{
     margin-top: 10px;
-    background: #edc2d8ff
+    background: #edc2d8ff;
 }
 
 .btn-blue{
