--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -9,12 +9,21 @@
             <hr>
             <h5>Question: <%= question.question %></h5>
             <h5>Type: <%=question.type %></h5>
-            <a href="/questions/<%=question._id%>">
-                <button type="button" class="btn">Show Question</button>
-            </a>
-            <a href="/questions/<%=question._id%>/edit">
-                <button type="button" class="btn">Edit Question</button type="button">
-            </a>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <a href="/questions/<%=question._id%>">
+                        <button type="button" class="btn btn-generic">Show Question</button>
+                    </a>
+                    <a href="/questions/<%=question._id%>/edit">
+                        <button type="button" class="btn btn-generic">Edit Question</button type="button">
+                    </a>
+                </div>
+                <form action="/questions/<%=question._id%>?_method=DELETE" method="POST">
+                    <button type="submit" class="btn btn-danger mt-10 mr-4">
+                        Delete
+                    </button>
+                </form>
+            </div>
         </div>
     <% })%>
 </div>
