--- a/views/showquestion.ejs
+++ b/views/showquestion.ejs
@@ -32,9 +32,16 @@
         }
     } %>
     <div class="general">
-        <a href="/questions/<%=question._id%>/edit">
-            <button type="button" class="btn btn-form">Edit Question</button type="button">
-        </a>
+        <div class="d-flex justify-content-between">
+            <a href="/questions/<%=question._id%>/edit">
+                <button type="button" class="btn btn-form">Edit Question</button type="button">
+            </a>
+            <form action="/questions/<%=question._id%>?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-danger mt-10 mr-4">
+                    Delete
+                </button>
+            </form>
+        </div>
     </div>
 </div>
 <%- include("partials/footer") -%>
