--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/navbar.css">
 <nav class="navbar navbar-expand-lg navbar-love">
-    <a class="navbar-brand text" href="#">
+    <a class="navbar-brand text" href="/">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/130px-Heart_coraz%C3%B3n.svg.png" width="30" height="30" class="d-inline-block align-top" alt="">
       Valentines Match Maker
     </a>
