--- a/views/newquestion.ejs
+++ b/views/newquestion.ejs
@@ -6,14 +6,14 @@
     <hr>
     <form action="/questions" method="POST">
         <label for="type">What kind of question do you want to add?</label>
-        <select name="type" class="form-control" id="type">
+        <select name="question[type]" class="form-control" id="type">
             <option value="text">Text</option>
             <option value="multiplechoice">Multiple Choice</option>
         </select>
         <hr>
         <div id="general" class="hide">
-            <input type="text" class="form-control" name="title" placeholder="Question title">
-            <textarea class="form-control" name="question" placeholder="Question text"></textarea>
+            <input type="text" class="form-control" name="question[title]" placeholder="Question title">
+            <textarea class="form-control" name="question[question]" placeholder="Question text"></textarea>
         </div>
         <div id="text" class="hide">
             <input type="submit" class="btn btn-form" value="Create Question!">
@@ -21,8 +21,8 @@
 
         <div id="multiplechoice" class="hide">
             <p>Possible answers: </p>
-            <input type="text" class="form-control answer" name="answer1" id="answer1">
-            <input type="text" class="form-control answer" name="answer2" id="answer2">
+            <input type="text" class="form-control answer" name="question[possibleAnswers][1]" id="answer1">
+            <input type="text" class="form-control answer" name="question[possibleAnswers][2]" id="answer2">
             <button type="button" class="new btn btn-form">New Answer</button>
             <button type="button" class="remove btn btn-form">Delete Answer</button>
             <input type="submit" class="btn btn-form" value="Create Question!">
