--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     font-family: sans-serif;
-    line-height: 1; 
+    line-height: 1;
     backdrop-filter: blur(20px);  
     -webkit-backdrop-filter: blur(20px);
     padding: 20px 40px;
@@ -13,7 +13,7 @@ body{
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 100vh;
+    min-height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
