--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <h1>Valentine's Test</h1>
         <h3>Ready to find true love?</h3>
         <hr>
-        <a href="/test/1">
+        <a href="/test">
             <button class="btn btn-default btn-lg btn-dark">Take the test</button>
         </a>
     </div>
