--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,9 @@
         <a href="/test">
             <button class="btn btn-default btn-lg btn-dark">Take the test</button>
         </a>
+        <a href="/logout">
+            <button class="btn btn-default btn-lg btn-dark">Log Out</button>
+        </a>
     </div>
 </div>
 
