--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,13 +5,16 @@
       Valentines Match Maker
     </a>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link text" href="/questions">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text" href="/questions/new">New Question</a>
-          </li>
-        </ul>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link text" href="/questions">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text" href="/questions/new">New Question</a>
+        </li>
+      </ul>
+      <a class="nav-item text btn btn-info mx-lg-1 my-2 my-lg-0" href="/login">Login</a>
+      <a class="nav-item text mx-lg-1 my-2 my-lg-0" href="/register"><button class="btn btn-info">Sign Up</button></a>
+      <a class="nav-item text mx-lg-1 my-2 my-lg-0" href="/logout"><button class="btn btn-info">Log out</button></a>
     </div>
 </nav>
