navbar shows which user

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,6 +13,9 @@
           <a class="nav-link text" href="/questions/new">New Question</a>
         </li>
       </ul>
+      <% if(currentUser) {%>
+        <li class="nav-link text">Logged in as <%= currentUser.username %></li>
+      <% } %>
       <% if(!currentUser) {%>
         <a class="nav-item text btn btn-info mx-lg-1 my-2 my-lg-0" href="/login">Login</a>
         <a class="nav-item text mx-lg-1 my-2 my-lg-0" href="/register"><button class="btn btn-info">Sign Up</button></a>
