--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
     <div id="formContent">
         <form action="/register" method="POST">
             <input type="text" name="username" class="fadeIn second" placeholder="username" required>
+            <input type="email" name="email" placeholder="email" required>
             <input type="password" name="password" placeholder="password" required>
             <input type="submit" value="Sign up" class="btn btn-form ml-5">
         </form>
