username in profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,12 +11,7 @@
           <div class="col">
             name
             <hr>
-            <form action="/profile" method="POST">
-                <input type="text" name="username" class="username" value="<%=user.username%>" disabled>
-                <i class="fas fa-edit mr-2 edit-icon-username"></i>
-                <submit class="btn btn-sm btn-form mt-0 btn-edit edit-username">Save</submit>
-                <button type="button" class="btn btn-sm btn-form mt-0 btn-edit edit-username">Cancel</button>
-            </form>
+            <%=user.username=>
             <p class="mt-5">
                 email
                 <hr>
