fix username in profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
           <div class="col">
             name
             <hr>
-            <%=user.username=>
+            <%=user.username%>
             <p class="mt-5">
                 email
                 <hr>
