next for submit

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -23,7 +23,7 @@
             } %>
         </div>
         <% }) %>
-        <input type="submit" value="Next" class="btn btn-form ml-5">
+        <input type="submit" class="btn btn-form ml-5">
     </form>
 <!--</div>-->
 <%- include("partials/footer") -%>
