--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%-include("partials/testNavbar") -%>
 <link rel="stylesheet" href="/css/login.css">
 
 <div class="wrapper fadeInDown">
