--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%-include("partials/testNavbar") -%>
 <link rel="stylesheet" href="/css/register.css">
 <div class="wrapper fadeInDown">
     <div id="formContent">
