--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%-include("partials/testNavbar") -%>
 <link rel="stylesheet" href="/css/test.css">
 
 <form action="/test" method="POST">
