letter appears correctly

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -25,7 +25,7 @@
         <p>We love you</p>
         <p>Sianah</p>
         <input type="checkbox" id="agreeCheckbox" name="agreement" value="yes" class="mt-2" required>  READ and READy to fall to fall in love<br>
-        <div class="d-flex justify-content-center"><button id="agreeButton" class="btn btn-form btn-lg mb-2">Next</button></div>
+        <div class="d-flex justify-content-center"><button type="button" id="agreeButton" class="btn btn-form btn-lg mb-2">Next</button></div>
     </div>
 
     <% questions.forEach(function(question, index){ %>
