--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header") -%>
+<%-include("partials/testNavbar") -%>
 <link rel="stylesheet" href="/css/profile.css">
 <div class="container mt-5">
     <div class="general">
