--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -2,3 +2,13 @@ input{
     background-color: inherit;
     border: none;
 }
+
+.col-1{
+    font-family: 'fontleroy_brown_nfregular';
+    font-size: 20px;
+}
+
+#results{
+    font-family: 'fontleroy_brown_nfregular';
+    font-size: 50px;
+}
