--- a/views/finish.ejs
+++ b/views/finish.ejs
@@ -3,9 +3,10 @@
 <div class="container text-center mt-15">
     <div class="content">
         <h1>Valentine's Test</h1>
-        <h3>congratulations! You have finished the test. Your answers will be submitted and you will be matched with someone soon</h3>
+        <h3>Congratulations! You have finished the test. Your answers will be submitted and you will be matched with someone soon</h3>
         <hr>
-        <p>In the meantime... </p>
+        <p>Test results will appear on your</p>
+        <a href="/profile" class="btn btn-form btn-lg">Profile</a>
     </div>
 </div>
 
