--- a/views/test.ejs
+++ b/views/test.ejs
@@ -50,7 +50,7 @@
         } %>
     </div>
     <% }) %>
-    <div class="d-flex justify-content-center"><input type="submit" id="submit" class="btn btn-form btn-lg mb-2"></input></div></div>
+    <div class="d-flex justify-content-center"><input type="submit" id="submit" class="btn btn-form-test btn-lg mb-2"></input></div></div>
     <!--<input type="submit" id="submit" value="Next" class="btn btn-form ml-5">-->
 </form>
 <script src="/js/test.js"></script>
