--- a/views/test.ejs
+++ b/views/test.ejs
@@ -10,7 +10,7 @@
         <p>you’re about to embark on a journey of love and self discovery. Please don’t take it too seriously, but also, your future depends on it.</p>
         <h2>How it works</h2>
         <ul>
-            <li>Take the test before xxxx</li>
+            <li>Take the test before Monday 10th of February</li>
             <li>Your answers will be run through a very smart algorithm</li>
             <li>On Valentine’s Day morning, you’ll receive a notification on the profile you’ve created on the site with your perfect match.</li>
             <li>Get together and celebrate your new found love before the end of February!</li>
