--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -31,8 +31,18 @@
         <div class="d-flex justify-content-center">
           <% if(user.answerList && user.answerList.length > 0){ %>
             <!--<span id="results">Results will be released soon...</span>-->
+            <% if(user.username == "Elysia" || user.username == "loverboy2000" || user.username == "Clo") {%>
+              <div id="results">Congratulations! You are in the new ATP throuple</div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div id="results">You have been matched with <%=match[0]%></div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div id="results">And also with <%=match[1]%></div>
+            <% } else { %>
             <div id="results">Congratulations! You have been matched with <%=match%></div>
-          </div>
+            <% } %>
+            </div>
             <div class="d-flex justify-content-center">Don't forget to find your match and wish them a happy valentines day!</div>
           <% } else { %>
               <a href="/test"><button class="btn btn-form mt-0">Answer Test</button></a>
